@@ -189,7 +189,7 @@ grub_ofconsole_checkkey (void)
       return 1;
     }
     
-  return 0;
+  return -1;
 }
 
 static int
